Finition de la page d'accueil et de la page d'article détaillé

--- a/Catalogue.html
+++ b/Catalogue.html
@@ -24,3 +24,6 @@
 </div>
 </table>
 </header>
+<div class="Catalogue">
+<a href="Article.html"><img src="Image/JackDaniels70cl.png" width=10% height=30%></a>
+</div>
