--- a/Commentaire.html
+++ b/Commentaire.html
@@ -25,6 +25,6 @@
 </table>
 </header>
 
-<div class="QSN">
-<h4>Qui sommes-nous?</h4>
-Ce site est le site n°1 de vente d'alcool en ligne, crée et mis en place par Charles ENG uniquement.
+<div class="com">
+Votre commentaire a bien été pris en compte.
+</div>
