Modification de dimension l'image de l'article

--- a/Article.html
+++ b/Article.html
@@ -29,7 +29,7 @@
 </header>
 
 <div class="Image">
-<img alt="Jack Daniel's 70cl" src="Image/JackDaniels70cl.png" width=85% height=60% title="Jack Daniel's">	
+<img alt="Jack Daniel's 70cl" src="Image/JackDaniels70cl.png" width=240px height=420px title="Jack Daniel's">	
 </div>	
 
 <div class="Détail">
