Correction des erreurs

--- a/Article.html
+++ b/Article.html
@@ -1,15 +1,11 @@
 <html>
 <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type"></meta>
-    <meta charset="utf-8"></meta>
-	<meta name="viewport" content="width=device-width"/>
-	<meta name="viewport" content="width=device-width, initial-scale=0.8"/>
     <title>Jack Daniel's 70cl</title>
     <link href="Style/style.css" type="text/css" rel="stylesheet"></link>
 </head>
 <body>
 <header>
-<img class="Logo" src="Image/Logo.png" width="5%" height="10%">
+<img class="Logo" src="Image/Logo.png" alt="Logo" width="5%" height="10%">
 <center>
 <table class="Barre">
 <tr>
@@ -22,7 +18,6 @@
 <div class="Recherche">
 <label for="Recherche"">Recherche :</label>
 <input type="text" id="Recherche" placeholder="Recherche par mot-clef">
-</select>
 <button title="Rechercher" onclick="self.location.href='Catalogue.html'">Go</button>
 </div>
 </table>
@@ -73,4 +68,4 @@ Jack Daniel's 40%</h2>
 </p>
  </form>
 </div>
-
+</html>
