--- a/Catalogue.html
+++ b/Catalogue.html
@@ -1,10 +1,6 @@
 <html>
 <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type"></meta>
-    <meta charset="utf-8"></meta>
     <title>Catalogue</title>
-	<meta name="viewport" content="width=device-width"/>
-	<meta name="viewport" content="width=device-width, initial-scale=0.8"/>
     <link href="Style/style.css" type="text/css" rel="stylesheet"></link>
 </head>
 <body>
@@ -65,3 +61,4 @@
 <button class="Panier">Ajouter au panier</button>
 </tr>
 </table>
+</html>
