Correction des erreurs

--- a/Catalogue.html
+++ b/Catalogue.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <header>
-<img class="Logo" src="Image/Logo.png" width="5%" height="10%">
+<img class="Logo" src="Image/Logo.png" alt="Logo" width="5%" height="10%">
 <center>
 <table class="Barre">
 <tr>
@@ -18,7 +18,6 @@
 <div class="Recherche">
 <label for="Recherche"">Recherche :</label>
 <input type="text" id="Recherche" placeholder="Recherche par mot-clef">
-</select>
 <button title="Rechercher" onclick="self.location.href='Catalogue.html'">Go</button>
 </div>
 </table>
