--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <html>
 <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type"></meta>
-    <meta charset="utf-8"></meta>
     <title>Jack'Info</title>
     <link href="Style/style.css" type="text/css" rel="stylesheet"></link>
 </head>
 <body>
 <header>
-<img class="Logo" src="Image/Logo.png" width="5%" height="10%">
+<img class="Logo" src="Image/Logo.png" alt="Logo" width="5%" height="10%">
 <center>
 <table class="Barre">
 <tr>
@@ -20,7 +18,6 @@
 <div class="Recherche">
 <label for="Recherche"">Recherche :</label>
 <input type="text" id="Recherche" placeholder="Recherche par mot-clef">
-</select>
 <button title="Rechercher" onclick="self.location.href='Catalogue.html'">Go</button>
 </div>
 </table>
@@ -33,3 +30,4 @@ Bienvenue !
 </center>
 <a href="Catalogue.html"><img alt="Promotion Jack Daniel's" src="Image/Promo.png" title="Aller au rayon Jack Daniel's"></a>
 <div>
+</html>
